# scxml_manager

./: CMakeLists.txt  README.md  package.xml  setup.py
launch/: scxml_interpreter.launch
resources/: pickandplace.scxml  pickandplace2.scxml  simple_file.scxml  test.scxml
scripts/: scxml_interpreter_node
src/scxml_manager/: move_ur.py  pickplace.py  pickplace2.py
